--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -1,9 +1,16 @@
+<%
+  def link_to(name, url)
+    return "<a href='#{url}'>#{name}</a>"
+  end
+%>
+
 <html>
   <body>
     <h1>You're using a layout</h1>
     <p>
       <h3> I'm a header</h3>
       <p>Put things in the header</p>
+    <%= link_to('This is a link to google', 'http://google.com') %>
       <a href='me.html'>Me</a>
 
     </p>
@@ -15,6 +22,7 @@
     <div>
       <h3> I'm a footer</h3>
       <p>Put things in the footer</p>
+      <a href="http://google.com">Just in case you need another link to google</a>
     </div>
   </body>
 </html>
